php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #20155 xmlrpc compile problem with zendengine2
Submitted: 2002-10-29 16:56 UTC Modified: 2003-01-10 02:23 UTC
From: jan at kneschke dot de Assigned:
Status: Closed Package: Scripting Engine problem
PHP Version: 4CVS-2002-10-29 OS: Linux
Private report: No CVE-ID: None
 [2002-10-29 16:56 UTC] jan at kneschke dot de
gcc 
-I/home/weigon/projects/in-cvs/php4/ext/xmlrpc/libxmlrpc 
-DVERSION=0.50 -Iext/xmlrpc/ 
-I/home/weigon/projects/in-cvs/php4/ext/xmlrpc/ 
-DPHP_ATOM_INC -I/home/weigon/projects/in-cvs/php4/include 
-I/home/weigon/projects/in-cvs/php4/main 
-I/home/weigon/projects/in-cvs/php4 
-I/home/weigon/projects/in-cvs/php4/Zend 
-I/usr/include/freetype2 -I/usr//include  
-I/home/weigon/projects/in-cvs/php4/TSRM  -g -O2  -c 
/home/weigon/projects/in-cvs/php4/ext/xmlrpc/xmlrpc-epi-php.c 
-o ext/xmlrpc/xmlrpc-epi-php.o  && echo > 
ext/xmlrpc/xmlrpc-epi-php.lo 
/home/weigon/projects/in-cvs/php4/ext/xmlrpc/xmlrpc-epi-php.c: 
In function `set_zval_xmlrpc_type': 
/home/weigon/projects/in-cvs/php4/ext/xmlrpc/xmlrpc-epi-php.c:1348: 
structure has no member named `properties' 
/home/weigon/projects/in-cvs/php4/ext/xmlrpc/xmlrpc-epi-php.c:1349: 
structure has no member named `properties' 
make: *** [ext/xmlrpc/xmlrpc-epi-php.lo] Fehler 1 
 
Line 1348: 
                  if(SUCCESS == 
zend_hash_update(value->value.obj.properties, 
OBJECT_TYPE_ATTR, sizeof(OBJECT_TYPE_ATTR), (void *) 
&type, sizeof(zval *), NULL)) { 
                     bSuccess = 
zend_hash_update(value->value.obj.properties, 
OBJECT_VALUE_TS_ATTR, sizeof(OBJECT_VALUE_TS_ATTR), (void 
*) &ztimestamp, sizeof(zval *), NULL); 
                  } 
 
value.obj.properties is not available in ZendEngine2. 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-01-10 02:23 UTC] derick@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 30 00:00:01 2026 UTC