- Fixed bug #20155: xmlrpc compile problem with zendengine2 (Path by Jan   Schneider) @- Fixed bug #20155: xmlrpc compile problem with zendengine2 (Derick, Jan @  Schneider)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@111308 c90b9560-bf6c-de11-be94-00142212c4b1